# gu-examples

./: .gitignore  AGENTS.md  GEMINI.md  Makefile  README.md
counter/: README.md  go.mod  index.html  main.go  styles.go
counter/app/: app.go
counter/components/: components_test.go  counter.go
counter/state/: state.go  state_test.go
duckdb/: Makefile  README.md  go.mod  index.html  main.go  styles.go
duckdb/app/: app.go  app_test.go
duckdb/components/: components_test.go  explorer.go
launcher/: Makefile  README.md  go.mod  index.html  main.go  styles.go
logging/: .gitignore  DEBUG.md  README.md  go.mod  index.html  main.go  styles.go
nodegraph/: README.md  go.mod  graph.go  graph_test.go  main.go  styles.go
nodegraph-desktop/: Makefile  README.md  go.mod
nodegraph-tauri/: Makefile  README.md  go.mod  package-lock.json  package.json
nodegraph-tauri/src-tauri/: Cargo.toml  tauri.conf.json
nodegraph-tauri/src-tauri/capabilities/: default.json
nodegraph-tauri/src-tauri/src/: main.rs
openai-chat/: Makefile  README.md  debug_boot.js  debug_console.html  debug_console.js  go.mod  index.html  main.go  styles.go
reporting/: Makefile  README.md  app.go  go.mod  index.html  main.go  styles.go  table.go  uploader.go
shadcn/: README.md  go.mod  index.html  main.go
stocks/: Makefile  README.md  chart.go  data.go  go.mod  index.html  main.go  main_test.go
tailwind/: Makefile  README.md  go.mod  index.html  main.go
webgpu/: Makefile  README.md  go.mod  index.html  main.go
webllm/: Makefile  README.md  go.mod  go.sum  index.html  main.go
(+63 files in other folders)
